ops/servicemesh/retry/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: retry
  labels:
    app: retry
spec:
  selector:
    app: retry
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: retry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retry
    spec:
      containers:
      - name: retry
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
