ops/servicemesh/retry/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-gateway-vs
  labels:
    app: retry
spec:
  hosts:
  - "retry.frieza.local"
  gateways:
  - retry-gateway
  http:
  - match:
    - uri:
        prefix: /retry
    route:
    - destination:
        host: retry
    timeout: 10s
    retries:
      # リトライ回数
      attempts: 5
      # リトライタイムアウト
      perTryTimeout: 2s
      # リトライ条件
      # HTTP: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#x-envoy-retry-on
      # gRPC: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#x-envoy-retry-grpc-on
      retryOn: gateway-error,connect-failure,refused-stream,retriable-4xx
